Name: suns-search
Version: 1.0.0
Build-Type: Simple
License: GPL-2
License-File: LICENSE
Cabal-Version: >=1.14.0

Executable suns-admin
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4        && < 5   ,
        amqp                 >= 0.8      && < 0.9 ,
        containers,
        errors               >= 1.4.0    && < 1.5 ,
        haskeline            >= 0.7.0.0  && < 0.8 ,
        hslogger             >= 1.2.0    && < 1.3 ,
        optparse-applicative >= 0.5      && < 0.10,
        mtl                  >= 2.0.0.0  && < 2.2 ,
        transformers         >= 0.2.0.0  && < 0.4 ,
        text                 >= 0.11.0.0 && < 0.12
    Default-Language: Haskell98
    GHC-Options: -O2 -Wall
    Main-Is: Admin.hs

Executable suns-index
    Hs-Source-Dirs: src
    Build-Depends:
        base >= 4 && <= 5,
        array,
        attoparsec,
        bytestring,
        containers,
        deepseq,
        directory,
        errors,
        filepath,
        hslogger,
        MonadRandom,
        optparse-applicative,
        pipes >= 4.0.0 && < 4.2,
        text,
        text-format,
        transformers,
        unordered-containers,
        vector >= 0.10
    Default-Language: Haskell98
    Other-Modules: Point, Atom
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Index.hs

Executable suns-server
    Hs-Source-Dirs: src
    Build-Depends:
        base >= 4 && < 5,
        aeson < 0.7,
        amqp >= 0.8 && < 0.9,
        array,
        attoparsec,
        bytestring,
        containers,
        deepseq,
        directory,
        errors,
        filepath,
        haskeline >= 0.7.0.0 && < 0.8,
        hmatrix,
        hslogger,
        mmorph >= 1.0.0 && < 1.1,
        MonadRandom,
        optparse-applicative,
        pipes >= 4.0.0 && < 4.2,
        pipes-concurrency >= 2.0.0 && < 2.1,
        split,
        stm,
        text,
        text-format,
        transformers,
        unordered-containers,
        vector >= 0.10
    Other-Modules: Point, Atom
    Default-Language: Haskell98
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Server.hs
