Name: suns-search
Version: 1.0.0
Build-Type: Simple
License: GPL-2
License-File: LICENSE
Cabal-Version: >=1.14.0

Executable suns-admin
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5      && < 5   ,
        amqp                 >= 0.12     && < 0.13,
        haskeline            >= 0.6.0.0  && < 0.7 ,
        hslogger             >= 1.2.0    && < 1.3 ,
        optparse-applicative >= 0.5      && < 0.10,
        transformers         >= 0.2.0.0  && < 0.4 ,
        text                                < 1.2
    Default-Language: Haskell98
    GHC-Options: -O2 -Wall
    Main-Is: Admin.hs

Executable suns-index
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5     && < 5   ,
        array                              < 0.6 ,
        attoparsec           >= 0.9     && < 0.12,
        bytestring           >= 0.9.2.1 && < 0.11,
        containers           >= 0.4.0.0 && < 0.6 ,
        deepseq              >= 1.2.0.1 && < 1.4 ,
        directory                          < 1.3 ,
        errors               >= 1.3.0   && < 1.5 ,
        filepath                           < 1.4 ,
        hslogger             >= 1.2.0   && < 1.3 ,
        MonadRandom          >= 0.1.1   && < 0.2 ,
        optparse-applicative >= 0.5     && < 0.10,
        pipes                >= 4.0.0   && < 4.2 ,
        text                               < 1.2 ,
        text-format          >= 0.2.0.0 && < 0.4 ,
        transformers         >= 0.2.0.0 && < 0.4 ,
        unordered-containers >= 0.2.0.0 && < 0.3 ,
        vector               >= 0.10    && < 0.11
    Default-Language: Haskell98
    Other-Modules: Point, Atom
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Index.hs

Executable suns-server
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5      && < 5   ,
        aeson                >= 0.7      && < 0.9 ,
        amqp                 >= 0.12     && < 0.13,
        array                               < 0.6 ,
        attoparsec           >= 0.9      && < 0.12,
        bytestring           >= 0.9.2.1  && < 0.11,
        Cabal                >= 1.16              ,
        containers           >= 0.4.0.0  && < 0.6 ,
        deepseq              >= 1.2.0.1  && < 1.4 ,
        directory                           < 1.3 ,
        errors               >= 1.3.0    && < 1.5 ,
        filepath                            < 1.4 ,
        haskeline            >= 0.6.0.0  && < 0.7 ,
        hmatrix              >= 0.14.0.0 && < 0.17,
        hslogger             >= 1.2.0    && < 1.3 ,
        mmorph               >= 1.0.0    && < 1.1 ,
        MonadRandom          >= 0.1.1    && < 0.2 ,
        optparse-applicative >= 0.5      && < 0.10,
        pipes                >= 4.0.0    && < 4.2 ,
        pipes-concurrency    >= 2.0.0    && < 2.1 ,
        text                                < 1.2 ,
        text-format          >= 0.2.0.0  && < 0.4 ,
        transformers         >= 0.2.0.0  && < 0.4 ,
        unordered-containers >= 0.2.0.0  && < 0.3 ,
        vector               >= 0.10     && < 0.11
    Other-Modules: Point, Atom
    Default-Language: Haskell98
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Server.hs
