Name: suns-search
Version: 1.0.0
Build-Type: Simple
License: GPL-2
License-File: LICENSE
Cabal-Version: >=1.14.0

Executable suns-admin
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5      && < 5   ,
        amqp                 >= 0.14     && < 0.15,
        haskeline            >= 0.6.0.0  && < 0.8 ,
        hslogger             >= 1.2.0    && < 1.3 ,
        optparse-applicative >= 0.5      && < 0.14,
        transformers         >= 0.2.0.0  && < 0.6 ,
        text                                < 1.3
    Default-Language: Haskell98
    GHC-Options: -O2 -Wall
    Main-Is: Admin.hs

Executable suns-index
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5     && < 5   ,
        array                              < 0.6 ,
        attoparsec           >= 0.9     && < 0.14,
        bytestring           >= 0.9.2.1 && < 0.11,
        containers           >= 0.4.0.0 && < 0.6 ,
        deepseq              >= 1.4.2.0 && < 1.5 ,
        directory                          < 1.4 ,
        errors               >= 2.1.3   && < 2.2 ,
        filepath                           < 1.5 ,
        hslogger             >= 1.2.0   && < 1.3 ,
        MonadRandom          >= 0.5.1   && < 0.6 ,
        optparse-applicative >= 0.5     && < 0.14,
        pipes                >= 4.0.0   && < 4.4 ,
        text                               < 1.3 ,
        text-format          >= 0.2.0.0 && < 0.4 ,
        transformers         >= 0.2.0.0 && < 0.6 ,
        unordered-containers >= 0.2.0.0 && < 0.3 ,
        vector               >= 0.10    && < 0.12
    Default-Language: Haskell98
    Other-Modules: Point, Atom
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Index.hs

Executable suns-server
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5      && < 5   ,
        aeson                >= 1.0      && < 1.1 ,
        amqp                 >= 0.14     && < 0.15,
        array                               < 0.6 ,
        attoparsec           >= 0.9      && < 0.14,
        bytestring           >= 0.9.2.1  && < 0.11,
        Cabal                >= 1.16              ,
        containers           >= 0.4.0.0  && < 0.6 ,
        deepseq              >= 1.4.2.0  && < 1.5 ,
        directory                           < 1.4 ,
        errors               >= 2.1.3    && < 2.2 ,
        filepath                            < 1.5 ,
        haskeline            >= 0.6.0.0  && < 0.8 ,
        hmatrix              >= 0.14.0.0 && < 0.19,
        hslogger             >= 1.2.0    && < 1.3 ,
        mmorph               >= 1.0.0    && < 1.1 ,
        MonadRandom          >= 0.5.1    && < 0.6 ,
        optparse-applicative >= 0.5      && < 0.14,
        pipes                >= 4.0.0    && < 4.4 ,
        pipes-concurrency    >= 2.0.0    && < 2.1 ,
        text                                < 1.3 ,
        text-format          >= 0.2.0.0  && < 0.4 ,
        transformers         >= 0.2.0.0  && < 0.6 ,
        unordered-containers >= 0.2.0.0  && < 0.3 ,
        vector               >= 0.10     && < 0.12
    Other-Modules: Point, Atom
    Default-Language: Haskell98
    GHC-Options: -O2 -rtsopts -Wall
    Main-Is: Server.hs
